force-app/main/default/objects/AccountAssessmentRelation__c/AccountAssessmentRelation__c.object-meta.xml
<CustomObject>
    <label>Response</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Response</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>