force-app/main/default/objects/AccountAssessmentRelation__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <formula>TEXT(FLOOR(Number_of_Responses__c * 100 / Number_of_Questions__c)) + &quot;%&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Completed</label>
    <type>Text</type>
</CustomField>