force-app/main/default/objects/AccountAssessmentRelation__c/fields/Customer_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Review_Status__c</fullName>
    <label>Customer Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>