force-app/main/default/objects/AccountAssessmentRelation__c/fields/Follow_Up_Requests__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Requests__c</fullName>
    <label>#Follow Up Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>