force-app/main/default/objects/AccountAssessmentRelation__c/fields/PdfConvertor__c.field-meta.xml
<CustomField>
    <fullName>PdfConvertor__c</fullName>
    <label>PdfConvertor</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>