force-app/main/default/objects/AccountAssessmentRelation__c/fields/Response_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Response_Percentage__c</fullName>
    <label>% Completed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>