force-app/main/default/objects/AccountAssessmentRelation__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <label>Response received date</label>
    <type>DateTime</type>
</CustomField>